✨ feat(onboarding+): define domain models, JPA entities & API mappers
